# StringLibrary

./: CMakeLists.txt  examples.c  file_to_read.txt
